tests/compile_fail/add_assign/unit_struct.stderr
error: `AddAssign` cannot be derived for unit structs
 --> tests/compile_fail/add_assign/unit_struct.rs:2:1
  |
2 | struct Foo;
  | ^^^^^^
